--- a/Conf mdadm/Vagrantfile
+++ b/Conf mdadm/Vagrantfile
@@ -23,13 +23,14 @@ Vagrant.configure("2") do |config|
           # Adding a SATA controller that allows 5 hard drives
           vb.customize ['storagectl', :id, '--name',  'SATA Controller', '--add', 'sata',  '--controller', 'IntelAhci', '--portcount', 5]
           unless File.exist? (home + '/VirtualBox VMs/sata1.vdi')		    
-            vb.customize ['createhd', '--filename', home + '/VirtualBox VMs/sata1.vdi' , '--size', 1 * 1024]
+            vb.customize ['createhd', '--filename', home + '/VirtualBox VMs/sata1.vdi' , '--size', 1 * 10240]
             vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', home + '/VirtualBox VMs/sata1.vdi']
           end
           unless File.exist? (home + '/VirtualBox VMs/sata2.vdi')		    
-            vb.customize ['createhd', '--filename', home + '/VirtualBox VMs/sata2.vdi' , '--size', 1 * 1024]
-            vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 2, '--device', 0, '--type', 'hdd', '--medium', home + '/VirtualBox VMs/sata2.vdi']
+            vb.customize ['createhd', '--filename', home + '/VirtualBox VMs/sata2.vdi' , '--size', 1 * 10240]
+            vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', home + '/VirtualBox VMs/sata2.vdi']
           end
+          
           unless File.exist? (home + '/VirtualBox VMs/sata3.vdi')		    
             vb.customize ['createhd', '--filename', home + '/VirtualBox VMs/sata3.vdi' , '--size', 1 * 1024]
             vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 3, '--device', 0, '--type', 'hdd', '--medium', home + '/VirtualBox VMs/sata3.vdi']
@@ -45,6 +46,10 @@ Vagrant.configure("2") do |config|
           unless File.exist? (home + '/VirtualBox VMs/sata6.vdi')		    
             vb.customize ['createhd', '--filename', home + '/VirtualBox VMs/sata6.vdi' , '--size', 1 * 1024]
             vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 6, '--device', 0, '--type', 'hdd', '--medium', home + '/VirtualBox VMs/sata6.vdi']
+          end
+          unless File.exist? (home + '/VirtualBox VMs/sata7.vdi')		    
+            vb.customize ['createhd', '--filename', home + '/VirtualBox VMs/sata7.vdi' , '--size', 1 * 1024]
+            vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 2, '--device', 0, '--type', 'hdd', '--medium', home + '/VirtualBox VMs/sata7.vdi']
           end
             config.vm.provision :ansible do |ansible|
             ansible.verbose = "v"
