--- a/Conf mdadm/playbook.yml
+++ b/Conf mdadm/playbook.yml
@@ -5,40 +5,83 @@
   - name: install  packages
     become: yes
     become_method: sudo
-    yum: name={{ item }} state=present
-    with_items:
+    yum: 
+      name:
       - vim
       - mdadm
       - smartmontools
       - hdparm
       - gdisk
-  
-  - name: make raid 10
+      - lvm2 
+      - sysstat 
+      - parted 
+
+  - name: Create first partition
     become: yes
     become_method: sudo
-    shell: "{{ item }}"
-    with_items:
-    - mdadm --create /dev/md1 --level=10 --raid-devices=4 /dev/sd[bcde] --spare-devices=1 /dev/sdf
-    - mkdir /mnt/md1
-    - mkfs.ext4 -F /dev/md1
-    - mount /dev/md1 /mnt/md1/
-    
-      
-  - name: make GPT
+    parted:
+      label: gpt
+      state: present
+      device: /dev/sdg
+      number: 1
+      name: p1
+      part_start: 1%
+      part_end: 20%
+      unit: '%'
+
+  - name: Create second partition
     become: yes
     become_method: sudo
-    shell: "{{ item }}"
-    with_items:
-    - parted --script /dev/sdg mklabel gpt mkpart primary 1MiB 200MiB mkpart primary 200MiB 400MiB mkpart primary 400MiB 600MiB mkpart primary 600MiB 800MiB mkpart primary 800MiB 1000MiB \
-    - sleep 2
+    parted:
+      label: gpt
+      state: present
+      device: /dev/sdg
+      number: 2
+      name: p2
+      part_start: 21%
+      part_end: 40%
+      unit: '%'
+
+  - name: Create third partition
+    become: yes
+    become_method: sudo
+    parted:
+      label: gpt
+      state: present
+      device: /dev/sdg
+      number: 3
+      name: p3
+      part_start: 41%
+      part_end: 60%
+      unit: '%'
   
-#  - name: Mount md1
-#    become: yes
-#    become_method: sudo
-#    mount: 
-#      path: /mnt/md1
-#      src: /dev/md1 
-#      fstype: ext4
-#      opts: noatime 
-#      #fstad: /etc/fstab
-#      state: mounted    
+  - name: Create fourth partition
+    become: yes
+    become_method: sudo
+    parted:
+      label: gpt
+      state: present
+      device: /dev/sdg
+      number: 4
+      name: p4
+      part_start: 61%
+      part_end: 80%
+      unit: '%'
+
+  - name: Create fifth partition
+    become: yes
+    become_method: sudo
+    parted:
+      label: gpt
+      state: present
+      device: /dev/sdg
+      number: 5
+      name: p5
+      part_start: 81%
+      part_end: 99%
+      unit: '%'
+
+  become: yes
+  become_method: sudo
+  roles:
+    - role: './mrlesmithjr.mdadm'
