--- a/07-Systemd/Vagrantfile
+++ b/07-Systemd/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant.configure("2") do |config|
           #yum install epel-release -y
           
           SHELL
-          #config.vm.provision "shell", path: "./provision.sh"
+          config.vm.provision "shell", path: "./provision.sh"
       end
 
       end
