--- a/07-Systemd/Vagrantfile
+++ b/07-Systemd/Vagrantfile
@@ -42,9 +42,33 @@ Vagrant.configure("2") do |config|
           #yum install epel-release -y
           
           SHELL
+          config.vm.provision :file do |file|
+            file.source = "./watchlog"
+            file.destination = "/home/vagrant/watchlog"
+          end
+          config.vm.provision :file do |file|
+            file.source = "./watchlog.log"
+            file.destination = "/home/vagrant/watchlog.log"
+          end
+          config.vm.provision :file do |file|
+            file.source = "./watchlog.service"
+            file.destination = "/home/vagrant/watchlog.service"
+          end
+          config.vm.provision :file do |file|
+            file.source = "./watchlog.sh"
+            file.destination = "/home/vagrant/watchlog.sh"
+          end
+          config.vm.provision :file do |file|
+            file.source = "./watchlog.timer"
+            file.destination = "/home/vagrant/watchlog.timer"
+          end
+          config.vm.provision :file do |file|
+            file.source = "./spawn-fcgi.service"
+            file.destination = "/home/vagrant/spawn-fcgi.service"
+          end
           config.vm.provision "shell", path: "./provision.sh"
       end
-
+      
       end
    end
 end
