--- a/Conf_LVM/Vagrantfile
+++ b/Conf_LVM/Vagrantfile
@@ -68,10 +68,13 @@ Vagrant.configure("2") do |config|
         box.vm.provision "shell", inline: <<-SHELL
             mkdir -p ~root/.ssh
             cp ~vagrant/.ssh/auth* ~root/.ssh
-            yum install kernel-devel
             yum install -y mdadm smartmontools hdparm gdisk
           SHELL
   
         end
+        config.vm.provision :ansible do |ansible|
+            ansible.verbose = "v"
+            ansible.playbook = "playbook.yml"
+          end
     end
   end
