--- a/Conf_LVM/playbook.yml
+++ b/Conf_LVM/playbook.yml
@@ -12,10 +12,12 @@
     yum: 
         name:
           - vim
+          - xfsdump
 
   - name: Reduce xfs
     shell: "{{ item }}"
     with_items:
+      #reduce volume to 8GB
     - pvcreate /dev/sdb -y
     - vgcreate vg_root /dev/sdb -y
     - lvcreate -n lv_root -l +100%FREE /dev/vg_root -y
@@ -23,7 +25,7 @@
     - mount /dev/vg_root/lv_root /mnt
     - xfsdump -J - /dev/VolGroup00/LogVol00 | xfsrestore -J - /mnt
     - for i in /proc/ /sys/ /dev/ /run/ /boot/; do mount --bind $i /mnt/$i; done
-    -  chroot /mnt/
+    - chroot /mnt/
     - grub2-mkconfig -o /boot/grub2/grub.cfg
     - cd /boot ; for i in `ls initramfs-*img`; do dracut -v $i `echo $i|sed "s/initramfs-//g;s/.img//g"` --force; done
     - lvremove /dev/VolGroup00/LogVol00 -y
