--- a/Conf_LVM/playbook.yml
+++ b/Conf_LVM/playbook.yml
@@ -9,12 +9,17 @@
   - name: install  packages
     become: yes
     become_method: sudo
+    tags:
+         - packages
     yum: 
         name:
           - vim
           - xfsdump
+          - lvm2
 
   - name: Reduce xfs
+    tags:
+         - start reduce
     shell: "{{ item }}"
     with_items:
       #reduce volume to 8GB
@@ -29,11 +34,13 @@
     - chroot /mnt/
     - grub2-mkconfig -o /boot/grub2/grub.cfg
     - cd /boot ; for i in `ls initramfs-*img`; do dracut -v $i `echo $i|sed "s/initramfs-//g;s/.img//g"` --force; done
+    - sed -i 's|rd.lvm.lv=VolGroup00/LogVol00|rd.lvm.lv=vg_root/lv_root|g' /boot/grub2/grub.cfg
     - exit
     - reboot
     
+    
   
-  # - name: Unconditionally reboot the machine with all defaults
+  # - name: Reboot
   #   reboot:
   #     reboot_timeout: 3
   
@@ -68,7 +75,7 @@
     - mkdir /tmp/oldvar && mv /var/* /tmp/oldvar
     - umount /mnt
     - mount /dev/vg_var/lv_var /var
-    #- 'echo "`blkid | grep var: | awk '{print $2}'` /var ext4 defaults 0 0" >> /etc/fstab'
+    - "echo `blkid | grep var: | awk '{print $2}' /var ext4 defaults 0 0 >> /etc/fstab"
     - lvremove /dev/vg_root/lv_root
     - vgremove /dev/vg_root
     - pvremove /dev/sdb
@@ -79,7 +86,7 @@
     -  rm -rf /home/*
     - umount /mnt
     - mount /dev/VolGroup00/LogVol_Home /home/
-    #- 'echo "`blkid | grep Home | awk '{print $2}'` /home xfs defaults 0 0" >> /etc/fstab'
+    - "echo `blkid | grep Home | awk '{print $2}'` /home xfs defaults 0 0 >> /etc/fstab"
     - touch /home/file{1..20}
     - lvcreate -L 100MB -s -n home_snap /dev/VolGroup00/LogVol_Home
     - rm -f /home/file{11..20}
