--- a/Conf_LVM/playbook.yml
+++ b/Conf_LVM/playbook.yml
@@ -16,6 +16,14 @@
           - vim
           - xfsdump
           - lvm2
+  
+  - name: Restart server
+    tags:
+         - reboot
+    command: /sbin/shutdown -r +3
+    async: 0
+    poll: 0
+    ignore_errors: true
 
   - name: Reduce xfs
     tags:
@@ -23,20 +31,19 @@
     shell: "{{ item }}"
     with_items:
       #reduce volume to 8GB
-    - setenforce 0
+    
     - pvcreate /dev/sdb -y
     - vgcreate vg_root /dev/sdb -y
     - lvcreate -n lv_root -l +100%FREE /dev/vg_root -y
     - mkfs.xfs /dev/vg_root/lv_root
     - mount /dev/vg_root/lv_root /mnt
     - xfsdump -J - /dev/VolGroup00/LogVol00 | xfsrestore -J - /mnt
-    - for i in /proc/ /sys/ /dev/ /run/ /boot/;do mount --bind $i /mnt/$i;done
+    - for i in /proc/ /sys/ /dev/ /run/ /boot/;do mount --bind $i /mnt/$i; done
     - chroot /mnt/
     - grub2-mkconfig -o /boot/grub2/grub.cfg
     - cd /boot ; for i in `ls initramfs-*img`; do dracut -v $i `echo $i|sed "s/initramfs-//g;s/.img//g"` --force; done
     - sed -i 's|rd.lvm.lv=VolGroup00/LogVol00|rd.lvm.lv=vg_root/lv_root|g' /boot/grub2/grub.cfg
-    - exit
-    - reboot
+    
     
     
   
