--- a/Conf_LVM/playbook.yml
+++ b/Conf_LVM/playbook.yml
@@ -55,17 +55,17 @@
     with_items:     
     - xfsdump -J - /dev/VolGroup00/LogVol00 | xfsrestore -J - /mnt
     - for i in /proc/ /sys/ /dev/ /run/ /boot/;do mount --bind $i /mnt/$i; done
-    - chroot /mnt/
-    - grub2-mkconfig -o /boot/grub2/grub.cfg
-    - cd /boot ; for i in `ls initramfs-*img`; do dracut -v $i `echo $i|sed "s/initramfs-//g;s/.img//g"` --force; done
-    - sed -i 's|rd.lvm.lv=VolGroup00/LogVol00|rd.lvm.lv=vg_root/lv_root|g' /boot/grub2/grub.cfg
+    #- chroot /mnt/
+    - chroot /mnt/ grub2-mkconfig -o /boot/grub2/grub.cfg
+    - chroot /mnt/ cd /boot ; for i in `ls initramfs-*img`; do dracut -v $i `echo $i|sed "s/initramfs-//g;s/.img//g"` --force; done
+    - chroot /mnt/ sed -i 's|rd.lvm.lv=VolGroup00/LogVol00|rd.lvm.lv=vg_root/lv_root|g' /boot/grub2/grub.cfg
     
     
     
   
-  # - name: Reboot
-  #   reboot:
-  #     reboot_timeout: 3
+    - name: Reboot
+      reboot:
+        reboot_timeout: 3
   
 
   - name: Wait for the reboot to complete 
