All is work besides knock service

--- a/19-Firewall/Vagrantfile
+++ b/19-Firewall/Vagrantfile
@@ -126,13 +126,12 @@ Vagrant.configure("2") do |config|
           when "inetRouter2"
             box.vm.hostname = 'inetRouter2'
             box.vm.provision "shell", run: "always", inline: <<-SHELL
-              echo 1 > /proc/sys/net/ipv4/ip_forward
-              sed -i "s%net.ipv4.ip_forward = 0%net.ipv4.ip_forward = 1%g"  /etc/sysctl.conf
-              sysctl -p /etc/sysctl.conf
-             
+              # echo 1 > /proc/sys/net/ipv4/ip_forward
+              # sed -i "s%net.ipv4.ip_forward = 0%net.ipv4.ip_forward = 1%g"  /etc/sysctl.conf
+              # sysctl -p /etc/sysctl.conf
+              echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
               touch /etc/sysconfig/network-scripts/route-eth1
-              echo "192.168.0.0/28 via 192.168.254.1 dev eth1" >> /etc/sysconfig/network-scripts/route-eth1
-              touch /etc/sysconfig/network-scripts/route-eth1
+              
               echo "192.168.0.0/28 via 192.168.254.2 dev eth1" >> /etc/sysconfig/network-scripts/route-eth1
               echo "192.168.0.32/28 via 192.168.254.2 dev eth1" >> /etc/sysconfig/network-scripts/route-eth1
               echo "192.168.0.64/26 via 192.168.254.2 dev eth1" >> /etc/sysconfig/network-scripts/route-eth1
@@ -141,14 +140,18 @@ Vagrant.configure("2") do |config|
               echo "192.168.2.192/26 via 192.168.254.2 dev eth1" >> /etc/sysconfig/network-scripts/route-eth1
               echo "192.168.1.192/26 via 192.168.254.2 dev eth1" >> /etc/sysconfig/network-scripts/route-eth1
               
-              service network restart
+              #service network restart
+              systemctl restart network
+              systemctl stop NetworkManager
               systemctl start firewalld
-                firewall-cmd --zone=internal --change-interface=eth2
-                firewall-cmd --zone=public --change-interface=eth1
+                firewall-cmd --zone=internal --change-interface=eth1
+                firewall-cmd --zone=public --change-interface=eth2
                 firewall-cmd --zone=internal --add-masquerade --permanent
                 firewall-cmd --zone=public --add-forward-port=port=8080:proto=tcp:toport=80:toaddr=192.168.0.2 --permanent
-                systemctl enable firewalld
+                
                 firewall-cmd --reload
+                systemctl enable firewalld
+                systemctl restart network
               SHELL
 
            when "centralRouter"
@@ -160,7 +163,7 @@ Vagrant.configure("2") do |config|
                echo "GATEWAY=192.168.255.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
                echo "192.168.2.192/26 via 192.168.0.18 dev eth5" >> /etc/sysconfig/network-scripts/route-eth5
                echo "192.168.1.192/26 via 192.168.0.22 dev eth6" >> /etc/sysconfig/network-scripts/route-eth6
-                echo "192.168.1.192/26 via 192.168.0.22 dev eth6" >> /etc/sysconfig/network-scripts/route-eth6
+                  echo "192.168.254.0/30 via 192.168.254.2 dev eth7" >> /etc/sysconfig/network-scripts/route-eth7
                systemctl restart network
                SHELL
           
@@ -211,7 +214,7 @@ Vagrant.configure("2") do |config|
                 SHELL
                 
         end
-
+          
       end
 
   end
