--- a/19-Firewall/Vagrantfile
+++ b/19-Firewall/Vagrantfile
@@ -121,6 +121,9 @@ Vagrant.configure("2") do |config|
             echo "192.168.2.192/26 via 192.168.255.2 dev eth1" >> /etc/sysconfig/network-scripts/route-eth1
             echo "192.168.1.192/26 via 192.168.255.2 dev eth1" >> /etc/sysconfig/network-scripts/route-eth1
             service network restart
+            iptables-restore < /vagrant/inetrouter.rules
+            sed -i "s/PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
+            service sshd restart
             SHELL
 
           when "inetRouter2"
@@ -152,11 +155,14 @@ Vagrant.configure("2") do |config|
                 firewall-cmd --reload
                 systemctl enable firewalld
                 systemctl restart network
+                firewall-cmd --reload
               SHELL
 
            when "centralRouter"
              box.vm.hostname = 'centralRouter'
              box.vm.provision "shell", run: "always", inline: <<-SHELL
+               yum install nmap -y
+               cp /vagrant/knock.sh /home/vagrant/knock.sh && chmod +x /home/vagrant/knock.sh
                sysctl -w net.ipv4.ip_forward=1
                echo "net.ipv4.ip_forward = 1" >> /etc/sysctl.conf
                echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
@@ -194,6 +200,9 @@ Vagrant.configure("2") do |config|
               box.vm.provision "shell", run: "always", inline: <<-SHELL
                 echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
                 echo "GATEWAY=192.168.0.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+                yum install nginx -y
+                systemctl enable nginx
+                systemctl start nginx
                 systemctl restart network
                 SHELL
 
