--- a/13-LDAP/Vagrantfile
+++ b/13-LDAP/Vagrantfile
@@ -3,14 +3,16 @@
 home = ENV['HOME']
 
 MACHINES = {
-  :server => {
+  :ipaserver => {
         :box_name => "centos/7",
-        :ip_addr => '192.168.11.150',
+        
+        
   },
-  :client => {
+  :ipaclient => {
         :box_name => "centos/7",
-        :ip_addr => '192.168.11.151',
-  }
+        
+        
+  },
 }
 
 Vagrant.configure("2") do |config|
@@ -21,13 +23,16 @@ Vagrant.configure("2") do |config|
 
           box.vm.box = boxconfig[:box_name]
           box.vm.host_name = boxname.to_s
+          # box.vm.network "forwarded_port", guest: 8080, host: 8080
+          # box.vm.network "forwarded_port", guest: 8443, host: 8443
+          # box.vm.network "forwarded_port", guest: 8022, host: 8022
 
           #box.vm.network "forwarded_port", guest: 3260, host: 3260+offset
 
-          box.vm.network "private_network", ip: boxconfig[:ip_addr]
+          box.vm.network "public_network", use_dhcp_assigned_default_route: true
 
           box.vm.provider :virtualbox do |vb|
-          vb.customize ["modifyvm", :id, "--memory", "1024"]
+          vb.customize ["modifyvm", :id, "--memory", "2048"]
         #   vb.customize ["storagectl", :id, "--name", "SATA", "--add", "sata" ]
           vb.name = boxname.to_s
 
@@ -37,34 +42,23 @@ Vagrant.configure("2") do |config|
         #       end
         #       vb.customize ['storageattach', :id,  '--storagectl', 'SATA', '--port', dconf[:port], '--device', 0, '--type', 'hdd', '--medium', dconf[:dfile]]
         # end
-         end
+          end
      
 
       case boxname.to_s
-      
-      
-      when "server"
+      when "ipaserver"
         box.vm.provision "shell", run: "always", inline: <<-SHELL
-          
-          #cp /vagrant/id_rsa /home/vagrant/.ssh/
-          #chown vagrant:vagrant /home/vagrant/.ssh/id_rsa 
          
+          mkdir ~/ipaserverlab
           SHELL
-          config.vm.provision "shell", path: "./provision-server.sh"
-      when "client"
-        box.vm.provision "shell", run: "always", inline: <<-SHELL
-        
-        # sudo yum -y install freeipa-client
-        # sudo ipa-client-install --mkhomedir --force-ntpd
-        # sudo echo 'nameserver 192.168.11.150' >> /etc/resolv.conf
-        
-        SHELL
-        config.vm.provision "shell", path: "./provision-client.sh"
-      #end
-      
-        end
-      
+          config.vm.provision "shell", path: "./provision.sh"
+        when "ipaclient"
+          box.vm.provision "shell", run: "always", inline: <<-SHELL
+           
+            mkdir ~/ipaclientlab
+            SHELL
+      end
+
       end
    end
 end
-
