Barman mistakes:Creating replica and start switch-wall

--- a/26-Postgrsql-hotsbreplica-barmanbackup/playbook.yml
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/playbook.yml
@@ -17,3 +17,11 @@
   roles:
    - slave-setup
 
+- name: Настройка barman
+  hosts: barman
+  become: yes
+  roles:
+   - barman-install
+  tags:
+    - barman
+
