--- a/26-Postgrsql-hotsbreplica-barmanbackup/Vagrantfile
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/Vagrantfile
@@ -13,6 +13,11 @@ MACHINES = {
         
         
   },
+  :barman => {
+        :box_name => "centos/7",
+        
+        
+  },
 }
 
 Vagrant.configure("2") do |config|
