Correct all mistakes. Barman backup still not working

--- a/26-Postgrsql-hotsbreplica-barmanbackup/barman-install/tasks/main.yml
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/barman-install/tasks/main.yml
@@ -29,7 +29,7 @@
     name: barman
     state: present
 
-- name: Установке репозитория Postgres
+- name: Установка репозитория Postgres
   yum:
     name: https://download.postgresql.org/pub/repos/yum/11/redhat/rhel-7-x86_64/pgdg-centos11-11-2.noarch.rpm
     state: present
