--- a/26-Postgrsql-hotsbreplica-barmanbackup/barman-install/defaults/main.yml
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/barman-install/defaults/main.yml
@@ -2,7 +2,7 @@ master_ip: 192.168.111.39
 master_hostname: pgmaster
 slave_ip: 192.168.111.40
 slave_hostname: pgslave
-barman_ip: 192.168.111.37
+barman_ip: 192.168.111.38
 allow_subnet: 192.168.111.0
 barman_hostname: barman
 max_wal_senders: 3
@@ -13,3 +13,4 @@ barman_password: 12345
 replication_slot: slot
 barman_slot: barman
 pgdata: /var/lib/pgsql/11/data/
+base: test
