--- a/26-Postgrsql-hotsbreplica-barmanbackup/Vagrantfile
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/Vagrantfile
@@ -5,16 +5,19 @@ home = ENV['HOME']
 MACHINES = {
   :pgmaster => {
         :box_name => "centos/7",
+        :ip_addr => '192.168.11.39'
         
         
   },
   :pgslave => {
         :box_name => "centos/7",
+        :ip_addr => '192.168.11.40'
         
         
   },
   :barman => {
         :box_name => "centos/7",
+        :ip_addr => '192.168.11.38'
         
         
   },
@@ -34,10 +37,12 @@ Vagrant.configure("2") do |config|
 
           #box.vm.network "forwarded_port", guest: 3260, host: 3260+offset
 
-          box.vm.network "public_network", use_dhcp_assigned_default_route: true
+          #box.vm.network "public_network", use_dhcp_assigned_default_route: true
+          box.vm.network "private_network", ip: boxconfig[:ip_addr]
 
           box.vm.provider :virtualbox do |vb|
           vb.customize ["modifyvm", :id, "--memory", "2048"]
+          vb.customize ["modifyvm", :id, "--cpus", "4"]
         #   vb.customize ["storagectl", :id, "--name", "SATA", "--add", "sata" ]
           vb.name = boxname.to_s
 
