--- a/26-Postgrsql-hotsbreplica-barmanbackup/master-setup/templates/postgresql.conf
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/master-setup/templates/postgresql.conf
@@ -26,4 +26,4 @@ lc_numeric = 'en_US.UTF-8'                      # locale for number formatting
 lc_time = 'en_US.UTF-8'                         # locale for time formatting
 default_text_search_config = 'pg_catalog.english'
 archive_mode = on
-archive_command = 'barman-wal-archive barman.local master.local %p'
+archive_command = 'barman-wal-archive barman master.local %p'
