Added some changes

--- a/26-Postgrsql-hotsbreplica-barmanbackup/postgres-install/tasks/main.yml
+++ b/26-Postgrsql-hotsbreplica-barmanbackup/postgres-install/tasks/main.yml
@@ -16,7 +16,7 @@
        {{ slave_ip }}  {{ slave_hostname }}
        {{ barman_ip }}  {{ barman_hostname }}
 
-- name: Установке репозитория Postgres
+- name: Установка репозитория Postgres
   yum:
     name: https://download.postgresql.org/pub/repos/yum/11/redhat/rhel-7-x86_64/pgdg-centos11-11-2.noarch.rpm
     state: present
