Corrected all mistakes

--- a/33-NFS/Vagrantfile
+++ b/33-NFS/Vagrantfile
@@ -2,17 +2,17 @@
 # vi: set ft=ruby :
 Vagrant.configure(2) do |config|
   config.vm.box = "centos/7"
-  config.vm.provision "ansible" do |ansible|
-    ansible.groups = {
-      "dns" => ["ns"],
-      "client" => ["client"]
-      }
-    ansible.verbose = "v"
-    ansible.playbook = "provisioning/playbook.yml"
-    ansible.sudo = "true"
-  end
+  # config.vm.provision "ansible" do |ansible|
+  #   ansible.groups = {
+  #     "dns" => ["ns"],
+  #     "client" => ["client"]
+  #     }
+  #   ansible.verbose = "v"
+  #   ansible.playbook = "provisioning/playbook.yml"
+  #   ansible.sudo = "true"
+  # end
   config.vm.provider "virtualbox" do |v|
-          v.memory = 512
+          v.memory = 2048
   end
   config.vm.define "ns" do |ns|
     ns.vm.network "private_network", ip: "192.168.50.10", virtualbox__intnet: "local"
