--- a/14-Loging-EFK/Vagrantfile
+++ b/14-Loging-EFK/Vagrantfile
@@ -48,7 +48,8 @@ Vagrant.configure("2") do |config|
         #       vb.customize ['storageattach', :id,  '--storagectl', 'SATA', '--port', dconf[:port], '--device', 0, '--type', 'hdd', '--medium', dconf[:dfile]]
         # end
           end
-     
+          config.vm.provision "shell", inline: "mkdir /root/.ssh/ && cat /vagrant/ansible.pub >> /root/.ssh/authorized_keys && cat /vagrant/ansible.pub >> /home/vagrant/.ssh/authorized_keys"
+          config.ssh.username = "vagrant"
 
       case boxname.to_s
       when "web"
