--- a/14-Loging-EFK/playbook.yml
+++ b/14-Loging-EFK/playbook.yml
@@ -1,22 +1,28 @@
 ---
 
-- hosts: web
+- hosts: IntranetMonitoring WebServers WebMonitoring
   become: yes
   roles:
     - { role: CentOS_Srv }
-    - { role: nginx }
-    - { role: journaldClient }
-    - { role: rsyslogClient }
 
-- hosts: log 
+# Servers of logs
+- hosts: logsrv 
   become: yes
   roles:
-    - { role: CentOS_Srv }
     - { role: ntpd }
     - { role: journaldSrv }
     - { role: rsyslogSrv }
-# Servers of EFK stack
-# - hosts: logweb
-#   become: yes
-#   roles:
-#     - { role: ansible-efk-master }
+
+# Servers of ELK stack
+- hosts: logweb
+  become: yes
+  roles:
+    - { role: ELK }
+
+# Web server
+- hosts: web01
+  become: yes
+  roles:
+    - { role: nginx }
+    - { role: journaldClient }
+    - { role: rsyslogClient }
