--- a/14-Loging-EFK/roles/journaldSrv/tasks/main.yml
+++ b/14-Loging-EFK/roles/journaldSrv/tasks/main.yml
@@ -9,25 +9,19 @@
     mode: 0755
 
 - name: Added server journald.conf
-  copy: 
-    src: server_journald.conf 
-    dest: /etc/systemd/journald.conf.d/server.conf
+  copy: src=server_journald.conf dest=/etc/systemd/journald.conf.d/server.conf
 
 - name: systemd-journald.service restarted
-  service: 
-    name: systemd-journald.service 
-    state: restarted
+  service: name=systemd-journald.service state=restarted
 
 #
 # Installed systemd-journal-gateway and changed https to http
 #
 
 - name: Install package systemd-journal-gateway
-  yum: 
-    pkg: "{{ item }}" 
-    state: latest
+  yum: pkg={{ item }} state=latest
   with_items:
-    - "{{ systemd-journal-gateway }}"
+    - systemd-journal-gateway
 
 - name: Made log/journal/remote/
   file:
@@ -45,16 +39,10 @@
     #    backup: yes
 
 - name: sysD daemon_reload
-  systemd: 
-    daemon_reload: yes
+  systemd: daemon_reload=yes
 
 - name: Inserted systemd/journal-remote.conf
-  copy: 
-    src: serverpassive_journal-remote.conf 
-    dest: /etc/systemd/journal-remote.conf
+  copy: src=serverpassive_journal-remote.conf dest=/etc/systemd/journal-remote.conf
 
 - name: systemd-journal-remote.service restarted and enabled
-  systemd: 
-    name: systemd-journal-remote 
-    state: restarted 
-    enabled: yes
+  systemd: name=systemd-journal-remote state=restarted enabled=yes
